--- a/index.html
+++ b/index.html
@@ -92,8 +92,15 @@
     const config = {
         heartParticleCount: 800, // 爱心粒子更密集
         starCount: 1000,         // 背景光点数量，越多越震撼
-        messages: ["岁岁年年", "万物是你", "新春志喜", "人间理想", "温柔共度", "眸中星河", "Love You", "Forever"],
-        longText: "在这个星光闪烁的夜晚，\n想把所有的温柔都寄送给你。\n新的一年，\n我们依然在彼此的星轨里共鸣。\n愿你被世界温柔以待，\n而我，负责守护这份温柔。"
+        messages: ["岁岁年年", "万物是你", "新春志喜", "人间理想", "温柔共度", "眸中星河", "Love You", "Forever",
+                  "今天也想靠近你一点","和你待在一起就很安心","世界吵闹，但你刚刚好","新的一年，我还是站在你这边","不止今年，是很多年",
+                  "你一出现，我就心软",
+                  "我的温柔，大概都用在你身上了",
+                  "夜色刚好，你也刚好",
+                  "今晚也想对你说晚安",
+                  "With you, I feel home",
+                  "Still you, always you"],
+        longText: "想把所有的温柔都寄送给你。\n新的一年，\n我们依然在彼此的星轨里共鸣。\n愿你被世界温柔以待，\n而我，负责守护这份温柔。"
     };
 
     function init() {
@@ -218,3 +225,4 @@
 </script>
 </body>
 </html>
+
